Fix wrapping with search toggle.

--- a/scss/_omeka.scss
+++ b/scss/_omeka.scss
@@ -235,7 +235,7 @@ header .top-bar {
   }
 }
 
-header flex-fix {
+header .flex-fix {
   display: flex;
   flex-wrap: wrap;
 }
